--- a/f/fo/for/fortunecity.com.html
+++ b/f/fo/for/fortunecity.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fortunecity.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218090632id_/http%3A//www.fortunecity.com/corporate/about/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fortunecity.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603175325id_/http%3A//www.fortunecity.com/corporate/about/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>FortuneCity &gt; Corporate &gt; About Us &gt; Privacy Policy</title>
@@ -109,11 +109,11 @@ Begin Privacy Policy
 <td>
 <table style="text-align:justify" cellpadding="18" cellspacing="6"><tbody><tr><td>
 
-<u>I.	Welcome</u>
+<u>I. Welcome</u>
 <br><br>
 	Welcome to FortuneCity.com Inc. &nbsp;  FortuneCity.com Inc. is proud to be the home of a true democratic community in cyberspace built by you, the Internet community.  
 <br><br>
-	This privacy policy applies to the web sites, or networks, owned by FortuneCity.com, Inc. ("The FortuneCity Network"), including FortuneCity.com,  FortuneCity.co.uk, FortuneCity.de, FortuneCity.it, FortuneCity.es, FortuneCity.fr, FortuneCity.se, FortuneCity.nl, in.FortuneCity.com, pt.FortuneCity.com, cn.FortuneCity.com, Hotgames.com, GamePlay.FortuneCity.com, WAPDrive, Bravenet.com, WSX.com, and V3.com.  Those sites are collectedly referred to as the "The FortuneCity Network."
+	This privacy policy applies to the web sites, or networks, owned by FortuneCity.com, Inc. ("The FortuneCity Network"), including FortuneCity.com,  FortuneCity.co.uk, FortuneCity.de, FortuneCity.it, FortuneCity.es, FortuneCity.fr, FortuneCity.se, FortuneCity.nl, in.FortuneCity.com, pt.FortuneCity.com, cn.FortuneCity.com, Hotgames.com, and V3.com.  Those sites are collectedly referred to as the "The FortuneCity Network."
 <br><br>
 	Even though The FortuneCity Network provides a different combination of services, this policy states the company-wide Privacy Policy with regard to data collection practices.
 <br><br>
@@ -122,18 +122,18 @@ Begin Privacy Policy
 	Your privacy on the Internet is incredibly important to The FortuneCity Network and should also be to you too!  The FortuneCity Network collects certain information about its visitors and members.  The FortuneCity Network feels that you should fully understand the terms and conditions that deal with that collection and use of information.  This privacy statement discloses what information we collect, how we use it, and how to correct or change it.
 <br><br><br>
 
-<u>II.	Nature of Information Collected</u>
+<u>II. Nature of Information Collected</u>
 <br><br>
 	There are two types of information collected by The FortuneCity Network core site: (A) anonymous and (B) personally identifiable.  The FortuneCity Network's collection practices regarding these two are discussed in greater detail below.  
 <br><br>
 <ul>
-<i>A.	Anonymous Information Collection</i>
+<i>A. Anonymous Information Collection</i>
 <br><br>
 	Anonymous information refers to information that cannot be tied back to a specific individual.  As with visiting any web site, The FortuneCity Network collects some basic information about your computer, including browser type, operating system, IP address, Internet service provider and geographic location. 
 <br><br>
-<i>B.	Personally Identifiable Information</i>
+<i>B. Personally Identifiable Information</i>
 <br><br>
-	Personally identifiable information can be used to directly identify an individual.  The FortuneCity Network requires a limited amount of personal information to be collected in order to better serve you.  When you decide to become a member of a FortuneCity Network site, the only information that you must provide is the first and last name that will appear on your FortuneCity e-mail account and a valid e-mail address.  This allows FortuneCity to set up your e-mail account and give you free web page space.
+	Personally identifiable information can be used to directly identify an individual. The FortuneCity Network requires a limited amount of personal information to be collected in order to better serve you. When you decide to become a member of a FortuneCity Network site, the only information that you must provide is the first and last name that will appear on your FortuneCity e-mail account and a valid e-mail address. This allows FortuneCity to give you free web page space. 
 
 </ul><br><br>
 <u>III.	Use of Cookies</u>
@@ -145,45 +145,42 @@ Begin Privacy Policy
 	The FortuneCity Network places advertising on our sites that originates from third party advertisers and/or advertising agencies.  In some cases, if you click on or view these ads, the advertiser may assign you a cookie.  The FortuneCity Network does not control these cookies.  Please see the section entitled "Collection of Data by Third Parties" for more information on this issue.
 
 <br><br><br>
-<u>IV.	Purposes for Which Information is Collected</u>
+<u>IV. Purposes for Which Information is Collected</u>
 <br><br>
 	The FortuneCity Network tracks anonymous information to determine which pages are preferred based on traffic to those areas.  This information is aggregated to provide The FortuneCity Network with demographic and other statistical data that allows us to assess how well our web site is performing.  This helps us to continue building a better service for you.  The FortuneCity Network does not track what individual users read, only the performance of each page overall.
 <br><br>
 	The personal information collected from our members, or anyone that submits their personal information, is also used for the administration of our site; including corresponding with our citizens by e-mail when required and setting the content of personal home.
 <br><br>
 	The FortuneCity Network compiles statistical data on the number of visitors who access the banners and advertisements on our web site so that we can provide marketing information to our advertisers and sponsors.  The FortuneCity Network aggregates this information and creates statistical reports from the anonymous and demographic information for our advertisers.  This allows our advertisers to advertise more effectively, and allows our users to receive advertisements that are pertinent to their interests and needs.  Also, because The FortuneCity Network derives their revenue mainly from advertising, providing this data is essential to maintaining our services as free to users.
+<br><br>
+	The FortuneCity Network also collects email addresses for the purpose of keeping our members up to date with important system announcements and updates, and also for offering relevant third party opportunities via email.  Unsubscribe procedures from this notification list are posted at the bottom of each email.  Should a member unsubscribe from these notifications, The FortuneCity Network will delete the email address from our database and may terminate the account associated with that email address.
 <br><br><br>
 
-<u>IV.	Sharing of Information Collected by The FortuneCity Network</u>
+<u>V. Sharing of Information Collected by The FortuneCity Network</u>
 <br><br>
-	The FortuneCity Network shares anonymous data collected from visitors and citizens with third party advertisers and advertising agencies so that they may target their advertising and provide better services.  The FortuneCity Network does not, however, disclose any personal information to these third parties without first obtaining your consent.
+	The FortuneCity Network shares anonymous data collected from visitors and citizens with third party advertisers and advertising agencies so that they may target their advertising and provide better services. The FortuneCity Network may, from time to time, share information with third parties so that they can send special offers that may be of interest to our users.  By registering on our site you are consenting that we may share the information you provide to us with this select group of responsible partners. 
 <br><br>
 	The FortuneCity Network will cooperate, as appropriate, with police, judicial and other law enforcement agencies and disclose personal information and data upon receipt of the appropriate court orders.  The FortuneCity Network will also share personal information where it appears that, based on sufficient evidence, a visitor or a member is engaged, through the use of or access to this web site and its services, in illegal activities.  The FortuneCity Network refers citizens to The FortuneCity Network's Terms of Use.  The FortuneCity Network reserves the right in the absence of a court order, to release information concerning a citizen who The FortuneCity Network believe is in violation of the guidelines or is using The FortuneCity Network's servers for illegal activities, inappropriate conduct or in violation of the Chat Room and Message Board Rules.  
 <br><br><br>
 
-<u>V.	Collection of Data by Third Parties</u>
+<u>VI. Collection of Data by Third Parties</u>
 <br><br>
 	This web site contains links to other web sites.  When accessing the web sites of third parties advertising on The FortuneCity Network, including through ad banners and other links, you will be accessing sites that are not operated or controlled by The FortuneCity Network.  These sites may collect anonymous and personal information by various methods, including the use of cookies.  The privacy policies of these web sites may not be the same as those of The FortuneCity Network and may not afford visitors and citizens the same level of protection.  Visitors and citizens should contact these advertisers to verify the privacy policies of these web sites and their terms of use when accessing them and prior to providing any anonymous or personal information.
 
 <br><br><br>
-<u>VI.	Export of Data</u>
+<u>VII.	Export of Data</u>
 <br><br>
 	The FortuneCity Network may export information collected from visitors and members to countries or territories other than the country of residence of the visitors and citizens (including countries that do not necessarily afford by law the same amount of protection to personal information as the country of residence).  The FortuneCity Network complies with the laws and/or policies that protect a country's citizens from any dissemination of exported data to third parties without prior consent.
 <br><br><br>
 
-<u>VII.	Chat Rooms and Message Boards</u>
-<br><br>
-	The FortuneCity Network does not monitor their chat rooms or message boards.  You are advised to consult the guidelines in the Chat and Message Board Rules.  When engaging in chat rooms and message boards, you may be invited by third parties to provide your own personal information.  That information could be used by third parties for purposes that you do not wish they be used, including unsolicited e-mails and sharing of personal information with other third parties.  The FortuneCity Network strongly suggests that you do not share any of your personal information with third parties in chat rooms or message boards. 
-<br><br><br>
-
-<u>VIII.	Storage and Security</u>
+<u>VIII. Storage and Security</u>
 <br><br>
 	Data collected by The FortuneCity Network is stored in secure servers located in New York, London and Germany.  The FortuneCity Network has security procedures in place to protect the loss, misuse or alteration of information under its control.  These security measures include the necessary protection to prevent, as far as possible, access to The FortuneCity Network databases to parties other than The FortuneCity Network.
 <br><br><br>
 
 <u>IX.	Review, Correction of Information and Deactivation of Citizenship</u>
 <br><br>
-	Members and anyone who has submitted personal information may, at any time, review the information relating to them contained in The FortuneCity Network's databases and edit any incorrect information.  To do so, citizens and visitors may contact The FortuneCity Network by contacting us at FortuneCity.com Inc.  500 Seventh Avenue, 15th Floor  New York, NY 10018 or calling us at (212) 706-3100.
+	Members and anyone who has submitted personal information may, at any time, review the information relating to them contained in The FortuneCity Network's databases and edit any incorrect information. To do so, citizens and visitors may contact The FortuneCity Network by contacting us at FortuneCity.com Inc. 500 Seventh Avenue, 15th Floor New York, NY 10018 or by faxing us at (212) 706-3100. 
 
 <br><br>
 	A citizen may decide at any time to terminate his/her membership with The FortuneCity Network.  If so, a member should contact The FortuneCity Network using the contact information provided above to request the termination and deletion of any personal information already collected by The FortuneCity Network.  Please be advised that because of backups, and records of deletions, it may be impossible to delete all information about a citizen without some residual information still remaining.
@@ -191,12 +188,12 @@ Begin Privacy Policy
 	All requests to review, edit, or terminate a citizenship will be processed by The FortuneCity Network within a reasonable time of their receipt.
 <br><br><br>
 
-<u>X.	Protection of Minors</u>
+<u>X. Protection of Minors</u>
 <br><br>
 	The protection of children's online privacy is very important to The FortuneCity Network.  For that reason, it is our policy not to collect or maintain information at our web sites from those we actually know are under 13 and no part of our web sites is structured to attract anyone under 13. 
 <br><br><br>
 
-<u>XI.	Consent, Opt-In and Opt-Out</u>
+<u>XI. Consent, Opt-In and Opt-Out</u>
 <br><br>
 	Visitors and members of The FortuneCity Network confirm by visiting any of the sites or the submission of their personal information that they consent to the collection and processing of personal information, the use of cookies and transfer of personal data in countries other than their country of residence as detailed above.
 <br><br>
@@ -225,7 +222,7 @@ End Privacy Policy
 
 
 <div align="center"><br>
-<span class="copyright"><a href="http://www.fortunecity.com/corporate/about/copyright.shtml" class="privacy">Copyright</a> 1996-2001 FortuneCity.com, Inc.  All rights reserved.</span><span class="goldbar">&nbsp;|&nbsp;</span><a href="http://www.fortunecity.com/corporate/about/privacy.shtml" class="privacy">Privacy Policy</a>
+<span class="copyright"><a href="http://www.fortunecity.com/corporate/about/copyright.shtml" class="privacy">Copyright</a> 1996-2002 FortuneCity.com, Inc.  All rights reserved.</span><span class="goldbar">&nbsp;|&nbsp;</span><a href="http://www.fortunecity.com/corporate/about/privacy.shtml" class="privacy">Privacy Policy</a>
 </div>
 <br><br></td>
 </tr>
