--- a/t/ty/tyc/tycoelectronics.com.html
+++ b/t/ty/tyc/tycoelectronics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tycoelectronics.com privacy policy that was archived on 2001-10-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011019142114id_/http%3A//www.tycoelectronics.com/privacy.stm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tycoelectronics.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603175358id_/http%3A//www.tycoelectronics.com/privacy.stm) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -24,14 +24,13 @@ function ecomUrl(path) {
 		var value = allcookies.substring(start, end);
 		parent.location = unescape(value) + path;
 	} else {
-		parent.location = "http://amecst04.amp.com" + path;
+		parent.location = "https://ecommerce.tycoelectronics.com" + path;
 	}
 }
 // -->
 </script></head>
 <!-- BEGIN HEADER -->
    
-
 
 
 <body bgcolor="#ffffff">
@@ -43,7 +42,7 @@ function ecomUrl(path) {
 		<td align="left" valign="bottom"><a href="http://www.tycoelectronics.com/"><img src="/template/images/tyco_top_image1.jpg" border="0"></a></td>
 		<td align="right"><form action="http://search.tycoelectronics.com/cgi-bin/query"><a href="http://search.tycoelectronics.com"><b><font size="2" face="Arial" color="#000066">Search:</font></b></a> <input type="hidden" name="mss" value="tycoelectronics"> 
 <input type="hidden" name="pg" value="q">
-<input type="hidden" name="i" value="TycoElectronics"><input type="text" name="q"><input type="Image" alt="Submit" src="/newimages/go.gif" border="0"></form></td>
+<input type="hidden" name="i" value="TycoElectronics"><input type="text" name="q"><input type="Image" alt="Submit" src="/images/search_go.gif" border="0"></form></td>
 	</tr>
 	<tr>
 <td colspan="2" height="19" bgcolor="#000066" align="right" valign="bottom"><script language="Javascript">
@@ -52,9 +51,9 @@ function ecomUrl(path) {
 		// Array of month Namesvar
 		monthNames = new Array("January","February","March","April","May","June","July","August","September","October","November","December");
 		var now = new Date();
-		document.write("&nbsp;&nbsp;<font color=#ffffff face=Arial size=-2>" + dayNames[now.getDay()] + ", " + now.getDate() + " " + monthNames[now.getMonth()] + "  2001" );
+		document.write("&nbsp;&nbsp;<font color=#ffffff face=Arial size=-2>" + dayNames[now.getDay()] + ", " + now.getDate() + " " + monthNames[now.getMonth()] + "  2002" );
 		// -->
-</script>&nbsp;&nbsp;<font color="#ffffff" face="Arial" size="-2">Thursday, 30 January  2001&nbsp;</font></td>
+</script>&nbsp;&nbsp;<font color="#ffffff" face="Arial" size="-2">Thursday, 30 January  2002&nbsp;</font></td>
 	</tr>
     <tr><td colspan="2" valign="top" bgcolor="#8C8DB0"><img src="/template/images/%pixel.gif" width="1" border="0" hspace="0" vspace="0"></td><td>
  </td></tr>
@@ -64,11 +63,11 @@ function ecomUrl(path) {
 	<tbody><tr bgcolor="#000066" align="center">
         <td bgcolor="#000066" align="left" nowrap="">
 		<img src="/template/images/%pixel.gif" width="190" height="5" border="0" hspace="0" vspace="0">
-		<!-- <A HREF="http://ecat2.amp.com:85" class="nav" style="color:#ffffff;"><font size="-2" color="#ffffff" face="Verdana, sans-serif"><b>Catalog</b></FONT></A><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font> -->
     	<a href="http://www.tycoelectronics.com/products.stm" class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, sans-serif"><b>Products</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font>
+		<a href="http://catalog.tycoelectronics.com" class="nav" style="color:#ffffff;"><font size="-2" color="#ffffff" face="Verdana, sans-serif"><b>eCatalog</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font> 	
 		<a href="http://www.tycoelectronics.com/brands.stm" class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, sans-serif"><b>Brands</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font>
 		<a href="http://www.tycoelectronics.com/industries.stm" class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, sans-serif"><b>Industries</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font> 
-	<!-- 	<A HREF="javascript:ecomUrl('/commerce')"  class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, 	sans-serif"><b>eCommerce</b></FONT></A><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font> -->
+		<a href="javascript:ecomUrl('/commerce')" class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, 	sans-serif"><b>eCommerce</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font> 
 		<a href="http://www.tycoelectronics.com/cust.stm" class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, 	sans-serif"><b>Customer Service</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font>
 		<a href="http://www.tycoelectronics.com/about.stm" class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, sans-serif"><b>About</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif"> | </font>
 		<a href="http://www.tycoelectronics.com/" class="nav" style="color: #ffffff;"><font size="-2" color="#ffffff" face="Verdana, sans-serif"><b>Home</b></font></a><font size="-2" color="#ffffff" face="Verdana, sans-serif">
