--- a/d/di/die/dietclub.com.au.html
+++ b/d/di/die/dietclub.com.au.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the dietclub.com.au privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204213827id_/http%3A//www.familyhealth.com.au/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dietclub.com.au privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603180349id_/http%3A//www.dietclub.com.au/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
-	<title>FamilyHealth.com.au - Privacy Policy</title>
-	<meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.familyhealth.com.au&quot; r (cb 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.familyhealth.com.au&quot; r (n 0 s 0 v 0 l 0))">
+	<title>DietClub.com.au - Privacy Policy</title>
+	<meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.icra.org/ratingsv02.html&quot; l gen true for &quot;http://www.dietclub.com.au&quot; r (cb 1 lz 1 nz 1 oz 1 vz 1) &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true for &quot;http://www.dietclub.com.au&quot; r (n 0 s 0 v 0 l 0))">
 <style type="text/css">
 <!--
 P,BODY,TD {
@@ -18,7 +18,7 @@ A{
 	color : #000099;
 }
 
-H1 {
+H1,H2 {
 	font-size : small;
 	font-weight : bold;
 }
@@ -30,8 +30,17 @@ INPUT {
 	font-size: x-small;
 }
 
+.testimonials {
+	font-size: x-small;
+}
+
+.testimonialauthor {
+	font-size: x-small;
+	font-weight : bold;
+}
+
 .toplinks {
-	color : #000000;
+	color : #333333;
 	text-align : right;
 	font-weight : bold;
 	font-size: 9pt;
@@ -39,25 +48,13 @@ INPUT {
 	vertical-align : middle;
 }
 
-.aboutus_toplinks {
-	color : #000000;
-	text-align : right;
-	font-weight : normal;
-	font-size: x-small;
-	text-decoration : none;
-	vertical-align : middle;
-}
-
-.aboutusnavigationlinks {
-	font-size : x-small;
-	text-decoration : none;
-	text-align : right;
-	color : #000000;
-	background-color : #EEEEEE;
+.bmitable {
+	padding : 10;
+	font-weight : bold;
 }
 
 .bottomlinks {
-	background-color : #ADD6EF;
+	background-color : #51A572;
 	color : #000000;
 	text-decoration : none;
 }
@@ -67,7 +64,7 @@ INPUT {
 	text-decoration : none;
 	text-align : right;
 	color : #000000;
-	background-color : #86D3FF;
+	background-color : #ADDE7A;
 }
 
 .navigationlinkson {
@@ -76,11 +73,11 @@ INPUT {
 	font-weight : bold;
 	text-align : right;
 	color : #000000;
-	background-color : #90E6FF;
+	background-color : #A3DA69;
 }
 
 .leftnav1 {
-	background-color : #90E6FF;
+	background-color : #ADDE7A;
 }
 
 .leftnav2 {
@@ -97,6 +94,13 @@ INPUT {
 	font-weight : bold;
 }
 
+.nutheaderbox, .forumheaderbox, .diabetesheaderbox {
+	background-color : #51A572;
+	color : #000000;
+	font-weight : bold;
+	text-decoration : none;
+}
+
 .nutritiontype {
 	font-weight : bold;
 	font-size: x-small;
@@ -106,12 +110,12 @@ INPUT {
 	font-weight : bold;
 	font-size: x-small;
 	text-align: right;
-	background-color : Navy;
-	color : White;
+	background-color : #99D659;
+	color : #000000;
 }
 
 .leftmargin {
-	background-color : #64C0F6;
+	background-color : #99D659;
 	color : Black;
 	text-decoration : none;
 }
@@ -182,17 +186,6 @@ input.fancy {
 	padding : 1;
 	font-size : x-small;
 }
-
-.plainlink {
-	color: Black;
-	text-decoration : none;
-}
-
-.headline {
-	font-size : medium;
-	font-weight : bold;
-}
-
 -->
 </style>
 
@@ -200,60 +193,67 @@ input.fancy {
 
 <body bgcolor="#F7F5F7" marginheight="0" marginwidth="0" leftmargin="0" topmargin="0">
 
+<table border="0" cellpadding="0" cellspacing="0" width="700">
+<tbody><tr>
+<td>
 <!-- BANNER TABLE -->
 
-<table width="700" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr height="83">
 		<td width="220">
-			<a href="http://www.familyhealth.com.au"><img border="0" width="220" height="83" src="http://images.familyhealth.com.au/familyhealth/tl.jpg"></a></td>
-		<td width="479" bgcolor="#5E8FC9" align="center">
-			<a href="http://www.dietclub.com.au/ads/redirect.php?ad_id=1" target="_blank"><img style="border-color: black;" src="http://images.familyhealth.com.au/dietclub/ads/banners/lean_cuisine.gif" border="1" alt="Lean Cuisine" width="468" height="60" align="middle"></a>		</td>
-		<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+			<a href="http://www.dietclub.com.au"><img border="0" width="220" height="83" src="http://images.familyhealth.com.au/dietclub/tl.jpg"></a></td>
+		<td width="100%" bgcolor="#336600" align="center">
+			<a href="http://www.dietclub.com.au/ads/redirect.php?ad_id=6" target="_self"><img style="border-color: black;" src="http://images.familyhealth.com.au/dietclub/ads/banners/kraft.gif" border="1" alt="Kraft Light" width="468" height="60" align="middle"></a>		</td>
+		<td width="1" bgcolor="#000000">
+			<img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0">
+		</td>
 	</tr>
 </tbody></table>
 
 <!-- TITLE OF SITE TABLE -->
 
-<table width="700" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr height="34">
 		<td class="toplinks" width="185">
-			<a href="http://www.familyhealth.com.au/"><img src="http://images.familyhealth.com.au/familyhealth/bl.jpg" width="185" height="34" border="0"></a></td>
-		<td class="toplinks" width="514" bgcolor="#7BC3EF">
-			<a class="toplinks" href="http://www.familyhealth.com.au/">Network Home</a>&nbsp;·
+			<a href="http://www.dietclub.com.au/"><img src="http://images.familyhealth.com.au/dietclub/bl.jpg" width="185" height="34" border="0"></a></td>
+		<td class="toplinks" width="100%" bgcolor="#9CCB00">
 			<a class="toplinks" href="http://www.dietclub.com.au/">DietClub</a>&nbsp;·
-			<a class="toplinks" href="http://www.healthclub.com.au/">HealthClub</a>&nbsp;·
+			<a class="toplinks" href="http://www.healthclub.com.au/">Exercise</a>&nbsp;·
 			<a class="toplinks" href="http://www.healthchef.com.au/">Recipes</a>&nbsp;·
 			<a class="toplinks" href="http://www.healthmart.com.au/">Shopping</a>&nbsp;·
-			<a class="toplinks" href="http://www.dietclub.com.au/community/">Community</a>&nbsp;</td>
-		<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+			<a class="toplinks" href="http://www.dietclub.com.au/community/">Community</a>&nbsp;·
+			<a class="toplinks" href="http://www.dietclub.com.au/personal/">Personal Page</a>
+			&nbsp;&nbsp;</td>
+		<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0"></td>
 	</tr>
 	<tr height="1">
-		<td colspan="3" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+		<td colspan="3" bgcolor="#000000"><img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0"></td>
 	</tr>
 </tbody></table>
 
 <!-- MAIN TABLE -->
-<table width="700" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
 		<!-- Navigation and Features -->
 		<td width="124" class="leftmargin">
 
 
 <!-- MAIN SITE NAVIGATION -->
-<br><center><table cellpadding="4" cellspacing="1" border="0" width="104" bgcolor="#5D93B1">
+<br><center><table cellpadding="4" cellspacing="1" border="0" width="104" bgcolor="#6B8A4C">
 <tbody><tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="/">Home</a></td></tr>
-<tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="http://www.healthmart.com.au/palm/">Palm™ Software</a></td></tr>
-<tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="/news/">Health News</a></td></tr>
-<tr><td class="navigationlinksoff"><a class="navigationlinksoff" target="_horoscopes" href="http://archive.news.com.au/astrology/">Horoscopes</a></td></tr>
-<tr><td class="navigationlinksoff"><a class="navigationlinksoff" target="_whitepages" href="http://www.whitepages.com.au/">White Pages</a></td></tr>
-<tr><td class="navigationlinksoff"><a class="navigationlinksoff" target="_yellowpages" href="http://www.yellowpages.com.au/">Yellow Pages</a></td></tr>
-</tbody></table></center>
-	<br><br>
-	<img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="125" height="1" alt="" border="0">
+<tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="/personal/">Members</a></td></tr>
+<tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="/library/">Library</a></td></tr>
+<tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="/foods/">Food Database</a></td></tr>
+<tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="/community/">Community</a></td></tr>
+<tr><td class="navigationlinksoff"><a class="navigationlinksoff" href="/freeprofile/">Join Now!</a></td></tr>
+</tbody></table></center><br>
+
+<br><br>
+	<img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="125" height="1" alt="" border="0">
 </td>
 
 <!-- VERTICAL LINE -->
-<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0"></td>
 
 <!-- MAIN CONTENT -->
 
@@ -486,6 +486,8 @@ from those of The Family Health Network. Where they differ the more specific ter
 Privacy Policy before using their site or disclosing any of your personal information to 
 them.</p>
 
+<p><a href="/">Back to home page</a></p>
+
 					
 					</td>
 				</tr>
@@ -495,7 +497,7 @@ them.</p>
 			
 		</td>
 <!-- VERTICAL LINE -->
-<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0"></td>
 		
 	</tr>
 </tbody></table>
@@ -503,36 +505,40 @@ them.</p>
 
 <!-- HORIZONTAL LINE -->
 
-<table width="700" border="0" cellspacing="0" cellpadding="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr height="1">
-		<td colspan="2" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+		<td colspan="2" bgcolor="#000000"><img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0"></td>
 	</tr>
 	<tr>
 		<td>
 
 <!-- BOTTOM BAR TABLE -->
 
-<table width="699" border="0" cellspacing="0" cellpadding="5">
+<table width="100%" border="0" cellspacing="0" cellpadding="5">
 	<tbody><tr>
-		<td class="bottomlinks" align="center" width="698">
-		Copyright © Family Health Network Pty Ltd 1996-2001 All Rights Reserved<br>
-		<a class="bottomlinks" href="http://www.familyhealth.com.au/makeus/">Make Us Your Homepage</a> ·
-		<a class="bottomlinks" href="http://www.familyhealth.com.au/terms/">Terms of Use</a> ·
-		<a class="bottomlinks" href="http://www.familyhealth.com.au/aboutus/">Company</a> ·
-		<a class="bottomlinks" href="http://www.familyhealth.com.au/contactus/">Contact</a> ·
-		<a class="bottomlinks" href="http://www.familyhealth.com.au/privacy/">Privacy</a> ·
-		<a class="bottomlinks" href="http://www.familyhealth.com.au/aboutus/advertising/">Advertise</a>
+		<td class="bottomlinks" align="center">
+		Copyright © Family Health Network Pty Ltd 1996-2002 All Rights Reserved<br>
+		<a class="bottomlinks" href="http://www.dietclub.com.au/makeus/">Make Us Your Homepage</a> ·
+		<a class="bottomlinks" href="http://www.dietclub.com.au/terms/">Terms of Use</a> ·
+		<a class="bottomlinks" target="_blank" href="http://www.familyhealth.info/">Company</a> ·
+		<a class="bottomlinks" href="http://www.dietclub.com.au/contactus/">Contact</a> ·
+		<a class="bottomlinks" href="http://www.dietclub.com.au/privacy/">Privacy</a> ·
+		<a class="bottomlinks" target="_blank" href="http://www.familyhealth.info/advertising/">Advertise</a>
 		</td>
 	</tr>
 </tbody></table>
 
 		</td>
-		<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+		<td width="1" bgcolor="#000000"><img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0"></td>
 	</tr>
 	<tr height="1">
-		<td colspan="2" bgcolor="#000000"><img src="http://images.familyhealth.com.au/familyhealth/dot.gif" width="1" height="1" alt="" border="0"></td>
+		<td colspan="2" bgcolor="#000000"><img src="http://images.familyhealth.com.au/dietclub/dot.gif" width="1" height="1" alt="" border="0"></td>
 	</tr>
 </tbody></table>
+</td>
+</tr>
+</tbody></table>
+
 <br>
 
 
